[project]
name = "bbsky"
version = "0.1.0"
description = "Client for Blackbaud Sky API"
authors = [
    { name = "dcbark01", email = "dcbark01@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
universal = true
