[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
deps = "fawltydeps --check"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[project]
name = "bbsky"
version = "0.1.0"
description = "Client for Blackbaud Sky API"
authors = [
    { name = "dcbark01", email = "dcbark01@gmail.com" }
]
dependencies = [
    "attrs~=24.2.0",
    "cattrs~=24.1.2",
    "bottle~=0.13.1",
    "yarl~=1.14.0",
    "httpx~=0.27.2",
    "click~=8.1.7",
    "pendulum~=3.0.0",
    "pyright~=1.1.385",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
bbsky = "bbsky.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright~=1.1.384",
    "pytest~=8.3.3",
    "pre-commit~=4.0.1",
    "fawltydeps~=0.17.0",
]
universal = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"F",    # important pyflakes lints
	"I",    # import sorting
	"N",    # naming
	"T100", # breakpoints
]

[tool.ruff.lint.isort]
known-first-party = ["bbsky"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
ignore = ["tests/"]
pythonVersion = "3.10"

[tool.fawltydeps]
code = "src"
