[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
deps = "fawltydeps --check"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "deps", "test"] }

[project]
name = "bbsky"
dynamic = ["version"]
description = "Client for Blackbaud Sky API"
authors = [
    { name = "dcbark01", email = "dcbark01@gmail.com" }
]
dependencies = [
    "attrs>=24.2.0",
    "cattrs>=24.1.2",
    "bottle>=0.13.1",
    "yarl>=1.14.0",
    "httpx>=0.27.2",
    "click>=8.1.7",
    "pendulum>=3.0.0",
    "redis>=5.1.1",
    "python-dateutil~=2.9.0.post0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
bbsky = "bbsky.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "fawltydeps>=0.17.0",
    "black~=24.10.0",
    "docformatter~=1.7.5",
]
universal = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "build",
    "dist",
    ".venv",
    "src/bbsky/crm_constituent_client"
]

[tool.ruff.lint]
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"F",    # important pyflakes lints
	"I",    # import sorting
	"N",    # naming
	"T100", # breakpoints
]

[tool.ruff.lint.isort]
known-first-party = ["bbsky"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
ignore = [
    "tests/",
    "src/bbsky/crm_constituent_client/",
    "scripts/",
]
pythonVersion = "3.10"

[tool.fawltydeps]
code = [
    "src",
]
